--- a/production/conf/terrama2/terrama2_webmonitor.json.in
+++ b/production/conf/terrama2/terrama2_webmonitor.json.in
@@ -8,5 +8,6 @@
     "basePath": "%%TERRAMA2_BASE_PATH%%adm/",
     "port": %%NGINX_PORT%%,
     "host": "%%TERRAMA2_DNS%%"
-  }
+  },
+  "ssl": %%TERRAMA2_SSL%%
 }
