--- a/development/docker/report/report_server/Dockerfile
+++ b/development/docker/report/report_server/Dockerfile
@@ -1,3 +1,5 @@
 FROM node:12-slim
 
-RUN npm install -g nodemon
+RUN apt-get update && \
+    apt-get install gdal-bin && \
+    npm install -g nodemon
