--- a/development/docker/.env
+++ b/development/docker/.env
@@ -1,3 +1,7 @@
+TERRAMA2_VERSION=B4.1.1
+SATALERTAS_VERSION=B1.0.0
+TERRALIB_VERSION=5.4.5
+
 WEBAPP_NAME=terrama2_webapp_dev
 WEBAPP_PORT=127.0.0.1:36000
 WEBAPP_DEBUG_PORT=5858
